app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer components {
  .container {
    @apply px-4 pb-8;
    margin: 0 auto;

    @media screen and (min-width: 640px) {
      max-width: 100%;
    }

    @media screen and (min-width: 1024px) {
      max-width: 1024px;
    }

    @media screen and (min-width: 1280px) {
      max-width: 1128px;
    }
  }

  .card {
    @apply relative overflow-hidden;

    &.teaser-list {
      @apply flex gap-4;
    }
  }

  .card-image {
    @apply relative relative w-full pt-[57.25%];

    &.teaser-list {
      @apply w-[140px] overflow-hidden relative pt-[77px];
    }

    &.base {
      @apply mb-2 overflow-hidden;
    }
  }

  .card-headline {
    &.teaser {
      @apply absolute flex bottom-4 z-10 flex-row text-white dark:text-black;
    }
    &.teaser-list,
    &.base {
      @apply relative text-black dark:text-white;
    }
  }

  .card-headline__border {
    &.teaser {
      @apply mr-4 w-[0.75rem] h-auto;
    }
    &.teaser-list,
    &.base {
      display: none;
    }
  }

  .card-headline__label {
    &.teaser {
      @apply text-[1.25rem] leading-7 font-normal;
    }

    &.teaser-list,
    &.base {
      @apply text-[0.8rem] leading-4 font-normal;
    }
  }

  .card-headline__title {
    &.teaser {
      @apply text-[1.5rem] leading-8 font-bold;
    }

    &.teaser-list,
    &.base {
      @apply text-[1rem] leading-5 font-bold;
    }
  }
}

